2006-07-07  John W. Eaton  <jwe@octave.org>

	* miscellaneous/orderfields.m: New file.

2006-06-30  John W. Eaton  <jwe@octave.org>

	* time/datevec.m: Make another attempt to account for precision of
	datenum format.

2006-06-29  John W. Eaton  <jwe@octave.org>

	* miscellaneous/dump_prefs.m: Remove obsolete symbols from the list.
	Use feval instead of "type -q" to get values now that all the
	symbols are functions.

2006-06-16  John W. Eaton  <jwe@octave.org>

	* time/datevec.m: Avoid computing log of non-positive values.

2006-06-14  John W. Eaton  <jwe@octave.org>

	* time/datevec.m: Attempt to account for precision of datenum format.

2006-06-01  Quentin H. Spencer <qspencer@ieee.org>

	* audio/wavread.m: Fix file range error and add read support for
	24-bit WAV files.

2006-06-01  David Bateman  <dbateman@free.fr>

	* general/interpft.m, general/quadl.m, general/polyarea.m,
	general/interp1.m, general/gradient.m, general/interp2.m,
	general/bicubic.m, miscellaneous/inputname.m, plot/__plt3__.m,
	plot/ndgrid.m, plot/plot3.m, polynomial/pchip.m, sparse/pcg.m,
	sparse/pcr.m, strings/mat2str.m: New files from Octave Forge.

2006-05-31  Bill Denney  <bill@givebillmoney.com>

 	* miscellaneous/fileparts.m, miscellaneous/fullfile.m: Add seealso.
 	* miscellaneous/texas_lotto.m: Fix warning message.

2006-05-26  John W. Eaton  <jwe@octave.org>

	* miscellaneous/doc.m: Also handle nargin == 0.

2006-05-23  John W. Eaton  <jwe@octave.org>

	* plot/mesh.m: Use __gnupot_raw__ except where __gnuplot_set__ is
	really needed.

2006-05-22  John W. Eaton  <jwe@octave.org>

	* scripts/general/lookup.m: New file from Octave Forge.

2006-05-22  David Bateman  <dbateman@free.fr>

	* scripts/general/nthroot.m, scripts/linear-algebra/rref.m,
	scripts/specfun/isprime.m, scripts/specfun/primes.m,
	scripts/specfun/factor.m, scripts/specfun/nchoosek.m,
	scripts/specfun/legendre.m, scripts/specfun/perms.m,
	scripts/special-matrix/rosser.m,
	scripts/special-matrix/wilkinson.m,