@@ -1,3 +1,7 @@
+2006-07-22  John W. Eaton  <jwe@octave.org>
+
+	* special-matrix/hadamard.m: Coerce bool matrix to double.
+
 2006-07-07  John W. Eaton  <jwe@octave.org>
 
 	* miscellaneous/orderfields.m: New file.
